# github_agents

./: .dockerignore  .env.example  .gitignore  README.md  deploy_docs_refresher_to_ae.sh  deploy_pr_reviewer_to_ae.sh  deploy_webhook_to_cr.sh  pyproject.toml  run_agent.py  test_deployed_agents.py
deployment/: deploy_docs_refresher_to_ae.sh  deploy_pr_reviewer_to_ae.sh  deploy_webhook_to_cr.sh
docs_refresher/: __init__.py  agent.py  requirements.txt
mock_docs/: ingest_to_rag_engine.py
mock_docs/docs/: api_specifications.md  architecture_overview.md  pr_review_guidelines.md  python_style_guide.md
pr_reviewer/: __init__.py  agent.py  requirements.txt
test/: run_agent.py  test_deployed_agents.py  test_webhook_pr_closed.py  test_webhook_pr_created.py
webhook_service/: Dockerfile  README.md  __init__.py  broadcaster.py  engine_client.py  main.py
webhook_service/ui/: __init__.py  dashboard.html
