[project]
name = "github-adk-agent"
version = "0.1.0"
description = "A simple ADK Agent that connects to the remote GitHub MCP server using Vertex AI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-adk[a2a,gcp,otel-gcp]>=2.2.0",
    "google-cloud-aiplatform>=1.155.0",
    "mcp>=1.27.2",
    "python-dotenv>=1.2.2",
]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pr_reviewer", "docs_refresher"]



